<resources>
    <!-- App name -->
    <string name="app_name">Online Store App</string>

    <!-- Authorization -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="lets_login">Already have an account?</string>
    <string name="lets_reg">First time here?</string>
    <string name="login">Sign In</string>
    <string name="registration">Sign Up</string>
    <string name="log_out">Log Out</string>
    <string name="welcome_back">Welcome back</string>
    <string name="registration_text">Registration</string>
    <string name="first_name">First Name</string>
    <string name="sign_in_apple">Sign in with Apple</string>
    <string name="sign_in_google">Sign in with Google</string>

    <!-- Edit Text Validation -->
    <string name="error_at_least_8_chars">Password must be at least 8 characters long</string>
    <string name="email_is_not_valid">Email is not valid</string>

    <!-- User Experience -->
    <string name="successfully_updated">User Image successfully updated!</string>
    <string name="was_not_updated">User Image was not updated!</string>
    <string name="un_valid_password">Your password is not correct</string>
    <string name="successfully_created_account">Congratulations, your account has been created successfully!</string>
    <string name="email_already_used">This email address is already in use. Please try another email or log in with your existing account.</string>
    <string name="user_does_not_exist">User with these credentials does not exist</string>
    <string name="email_cannot_be_blank">The email field cannot be blank</string>
    <string name="upload_item">Upload Item</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>

    <!--Content descriptions    -->
    <string name="burger_icon">Burger Icon</string>
    <string name="background">background</string>
    <string name="logo">Logo</string>
    <string name="image_of_user">Image of User</string>
    <string name="placeholder_image">Default Image</string>
    <string name="main_image_view_of_product">Main Image View of Product</string>
    <string name="icon_back_arrow">Icon Back Arrow</string>
    <string name="shadow_effect">shadow effect</string>

    <!--Placeholder    -->
    <string name="placeholder_user_name">User Name</string>
    <string name="placeholder_item_name">New Balance</string>
    <string name="placeholder_price">$ 33.00</string>
    <string name="placeholder_discount">30% off</string>
    <string name="placeholder_category">Kids</string>

    <!--Static texts    -->
    <string name="profile">Profile</string>
    <string name="trade_by_bata">Trade by Bata</string>
    <string name="latest">Latest</string>
    <string name="flash_sale">Flash Sale</string>
    <string name="color">Color:</string>
    <string name="view_all">View all</string>
    <string name="empty_fav_list">You have not yet added any items to your favorites list.</string>

    <!--Categories static texts    -->
    <string name="phones">Phones</string>
    <string name="headphones">Headphones</string>
    <string name="cars">Cars</string>
    <string name="furniture">Furniture</string>
    <string name="kids">Kids</string>
    <string name="games">Games</string>

    <!--Profile static items-->
    <string name="trade_store">Trade Store</string>
    <string name="payment_method">Payment Method</string>
    <string name="balance">Balance</string>
    <string name="trade_history">Trade History</string>
    <string name="restore_purchase">Restore Purchase</string>
    <string name="help">Help</string>


    <!--Strings for adapters   -->
    <string name="product_price">$ %1\$s.00</string>
    <string name="product_reviews">(%,d reviews)</string>
    <string name="flash_sale_price">$ %s</string>
    <string name="flash_sale_discount">%s%% off</string>

    <!--Use cases Strings    -->
    <string name="password_validation_message">The password needs to contain at least one letter and digit</string>
    <string name="password_length_validation_message">The password needs to consist of at least 8 characters</string>
    <string name="name_blank_validation_message">The name can not be blank</string>
    <string name="email_blank_validation_message">The email can not be blank</string>
    <string name="email_invalid_validation_message">That is not a valid email</string>
    <string name="http_exception_message">HttpException</string>
    <string name="something_went_wrong_message">Something went wrong</string>
</resources>