<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.authorization.registration.RegistrationFragment">

    <TextView
        android:id="@+id/registration_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/registration_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/first_name_til"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="@string/first_name"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_tv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/first_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_til"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name_til">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_til"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:helperText="required"
        app:helperTextTextColor="@color/blue"
        app:layout_constraintEnd_toEndOf="@+id/email_til"
        app:layout_constraintStart_toStartOf="@+id/email_til"
        app:layout_constraintTop_toBottomOf="@+id/email_til">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue"
        android:text="@string/registration"
        app:layout_constraintEnd_toEndOf="@+id/password_til"
        app:layout_constraintStart_toStartOf="@+id/password_til"
        app:layout_constraintTop_toBottomOf="@+id/password_til" />

    <TextView
        android:id="@+id/already_have_account_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/lets_login"
        app:layout_constraintStart_toStartOf="@+id/sign_up_btn"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_btn" />

    <TextView
        android:id="@+id/sign_in_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:drawablePadding="10dp"
        android:text="@string/login"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="@id/already_have_account_tv"
        app:layout_constraintEnd_toEndOf="@id/sign_up_btn"
        app:layout_constraintStart_toEndOf="@+id/already_have_account_tv"
        app:layout_constraintTop_toTopOf="@id/already_have_account_tv" />

    <TextView
        android:id="@+id/sign_in_Google_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:text="@string/sign_in_google"
        app:drawableStartCompat="@drawable/ic_google"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_btn"
        app:layout_constraintStart_toStartOf="@+id/sign_up_btn"
        app:layout_constraintTop_toBottomOf="@+id/already_have_account_tv" />

    <TextView
        android:id="@+id/sign_in_Apple_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:text="@string/sign_in_apple"
        app:drawableStartCompat="@drawable/ic_apple"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_Google_bt"
        app:layout_constraintStart_toStartOf="@+id/sign_in_Google_bt"
        app:layout_constraintTop_toBottomOf="@id/sign_in_Google_bt"

        />

</androidx.constraintlayout.widget.ConstraintLayout>