<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="4dp">

    <androidx.cardview.widget.CardView
        android:layout_width="115dp"
        android:layout_height="145dp"
        android:layout_margin="5dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="8dp">



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/item_product_iv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/background"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/shape_shadow_effect"
                android:contentDescription="@string/shadow_effect" />

            <TextView
                android:id="@+id/item_price_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/placeholder_price"
                android:textColor="@color/white"
                android:textSize="7sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/item_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:text="@string/placeholder_item_name"
                android:textColor="@color/white"
                android:textSize="9sp"
                app:layout_constraintBottom_toTopOf="@+id/item_price_tv"
                app:layout_constraintStart_toStartOf="@+id/item_price_tv"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/item_category_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:background="@drawable/shape_rounded_corner_category"
                android:paddingHorizontal="8dp"
                android:text="@string/placeholder_category"
                android:textColor="@color/black"
                android:textSize="6sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/item_name_tv"
                app:layout_constraintStart_toStartOf="@+id/item_name_tv"
                tools:ignore="SmallSp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>